# EmbeddedTemplate

./: .changelogithub.json  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_EN.md
.githooks/: README.md  pre-commit
.github/: COMMIT_CONVENTION.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
3rd/: CMakeLists.txt
3rd/RTT/: CMakeLists.txt
app/: CMakeLists.txt  main.c  main.h  main_simple.c  syscalls.c  version.c  version.h
boards/: CMakeLists.txt
boards/stm32f407zg/: CMakeLists.txt  board.c  board_config.h  uart_driver.h  uart_port.c
boards/stm32f407zg/config/: board_config.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h
boards/stm32f407zg/linker/: stm32f407zgtx_flash.ld
boards/stm32f407zg/startup/: startup_stm32f407xx_gcc.S
boards/stm32h743zi/: CMakeLists.txt  board.c  board_config.h  hal_timebase.c  uart_port.c
boards/stm32h743zi/config/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
boards/stm32h743zi/linker/: stm32h743zitx_flash.sct  stm32h743zitx_flash_gcc.ld
boards/stm32h743zi/startup/: startup_stm32h743xx_gcc.S
cmake/: GetGitVersion.cmake  armclang.cmake  armgcc.cmake
cmake/toolchains/: arm-none-eabi-clang.cmake  arm-none-eabi-gcc.cmake
drivers/: CMakeLists.txt
drivers/STM32F4/: CMakeLists.txt
drivers/STM32H7/: CMakeLists.txt
include/: board.h
middleware/: .gitkeep
modules/: .gitkeep  CMakeLists.txt
modules/hylink/: CMakeLists.txt
modules/hylink/include/: hylink_parser.h  hylink_protocol.h
modules/hylink/src/: hylink_parser.c
modules/scheduler/: CMakeLists.txt  README.md
modules/scheduler/example/: scheduler_demo.c
modules/scheduler/include/: scheduler.h
modules/scheduler/port/ARM_CM4F/: port.c
modules/scheduler/src/: scheduler.c
modules/uart/: CMakeLists.txt
modules/uart/include/: uart_driver.h
modules/uart/src/: uart_driver.c
scripts/: .gitkeep  release.ps1  release.sh  setup-hooks.sh
tests/hw/: .gitkeep
tests/unit/: .gitkeep
tools/: extract_version.py
